# SciDataFusion

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  compose.env.example  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: agent-reflection-download-acceptance.md  automatic-live-acquisition-acceptance.md  chinese-workbench-reliability-acceptance.md  competition-requirements.md  current-topic-structured-preview-acceptance.md  deployable-ai-platform-acceptance.md  implementation-roadmap.md  local-artifact-database-acceptance.md  multi-channel-search-acceptance.md  phase-0-acceptance.md  phase-1-acceptance.md  phase-1-m00-acceptance.md  phase-1-m01-acceptance.md  phase-1-m02-acceptance.md  phase-1-m03-acceptance.md  phase-2-m04-acceptance.md  phase-2-m05-acceptance.md  phase-2-m06-acceptance.md  phase-3-m07-acceptance.md  phase-3-m08-acceptance.md  phase-3-m09-acceptance.md  phase-3-m10-acceptance.md  phase-4-m13-acceptance.md  phase-4-m14-acceptance.md  phase-4-m15-acceptance.md  phase-5-m16-acceptance.md  phase-5-m17-acceptance.md  phase-5-m18-acceptance.md  phase-6-m19-acceptance.md  phase-7-m11-acceptance.md  phase-7-m12-acceptance.md  phase-8-m20-acceptance.md  phase-9-m21-acceptance.md  phase-9-m22-acceptance.md  product-autonomous-exploration-acceptance.md  product-interactive-graph-acceptance.md  product-workbench-acceptance.md  quality-approved-demo.md  reviewable-field-mapping-acceptance.md  risk-tiered-review-acceptance.md  (+1 more)
docs/adr/: 0001-engineering-baseline.md  0002-content-addressed-data-contracts.md  0003-phase1-workflow-gates.md  0004-capability-backed-search-planning.md  0005-controlled-federated-connectors.md  0006-evidence-backed-source-selection.md  0007-controlled-artifact-acquisition.md  0008-artifact-classification-and-parse-routing.md  0009-unified-document-ir-and-parser-execution.md  0010-native-table-ir-and-cell-evidence.md  0011-evidence-first-explicit-table-extraction.md  0012-thresholded-evidence-backed-field-mapping.md  0013-no-guess-evidence-preserving-normalization.md  0014-exact-identifier-conservative-entity-resolution.md  0015-exact-consensus-conflict-preserving-fusion.md  (+21 more)
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
prompts/: online_acquisition_reflection.md  online_artifact_qualification.md  online_field_mapping.md  online_quality_review.md  online_search_planning.md  online_source_assessment.md  problem_compiler.md
schema_packs/: registry.json
scripts/: build_windows_release.ps1  check.ps1  scan_secrets.py  verify_graph_ui.cjs  verify_topic_exploration_ui.cjs
search_capabilities/: registry.json
task_packs/: registry.json
tests/: test_artifact_classifier.py  test_artifact_contracts.py  test_artifact_downloader.py  test_artifact_primitives.py  test_artifact_service.py  test_bailian.py  test_cli.py  test_config.py  test_connector_contracts.py  test_connector_execution.py  test_connector_http.py  test_connector_normalizer.py  test_connector_registry.py  test_contract_compiler.py  test_contracts.py  test_delivery_api.py  test_delivery_service.py  test_desktop.py  test_document_adapters.py  test_document_contracts.py  test_document_fixtures.py  test_document_runtime_fixtures.py  test_document_service.py  test_document_storage.py  test_entity_resolution_service.py  test_errors.py  test_extraction_service.py  test_figure_service.py  test_fusion_service.py  test_intake.py  test_knowledge_service.py  test_logging.py  test_mapping_service.py  test_normalization_service.py  test_online_mapping.py  test_online_research.py  test_online_structured.py  test_packaged_registries.py  test_parse_planning_service.py  test_parse_router.py  (+16 more)
(+279 files in other folders)
